# zapd

./: .gitignore  Cargo.toml  LICENSE  LLM.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json
src/: broker.rs  frame.rs  host.rs  install.rs  main.rs
tests/: concurrent_spawn.rs  e2e.py
