[package]
name = "zapd"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
description = "ZAP universal router — the one shared local broker every ZAP service connects to"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zap-proto/zapd"
keywords = ["zap", "zapd", "router", "broker", "rpc"]
categories = ["network-programming"]

# ONE binary. Router by default; native-messaging host when a browser launches
# it (or `zapd host`). Decomplected into modules (frame / broker / host), not
# into separate artifacts.
[[bin]]
name = "zapd"
path = "src/main.rs"

[dependencies]
# The universal router is schema-agnostic: it never parses a payload, so it
# depends on NO ZAP schema crate and — deliberately — NO capnp. It moves
# opaque ZAP frames between nodes on std::io + tokio alone. The ZAP wire/RPC
# (our fork) lives end-to-end between providers and consumers, above the router.
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
# Native-messaging host mode: the Chrome-forced JSON inch (the only JSON, at the
# browser boundary) + base64 for the opaque payload. Everything else is binary.
serde_json = "1"
base64 = "0.22"
# flock(2) for the single-instance spawn lock (serialize unlink+bind so racing
# routers can't both win on a stale socket). Tiny, already a transitive dep.
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
